package Gui;


public class App {
	public static void main(String[] args) {
		PacmanGame game = new PacmanGame();
		game.play();
		
	}
}
